Fixed performance issues

--- a/index.html
+++ b/index.html
@@ -10,29 +10,33 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-    <script src="./scripts/script.js"></script>
     <title>Anish K. Neupane</title>
 </head>
 
-<body onload="getData()">
+<body>
     <div id="root" class="min-h-screen max-w-screen flex flex-col">
         <nav
-            class="left-0 top-0 w-screen md:w-36 z-30 h-12 md:h-screen fixed bg-blue-300 backdrop-blur-sm bg-opacity-35 text-black md:backdrop-blur-none md:bg-opacity-100 md:z-50">
-            <div class="w-full h-full text-center content-center md:hidden hover:cursor-pointer" id="mobile-nav"
-                onclick="toggleNavbar()">Open Navbar</div>
+            class="left-0 top-0 w-screen md:w-36 z-30 h-12 md:h-screen fixed bg-blue-300 backdrop-blur-sm bg-opacity-35 text-black md:backdrop-blur-none md:bg-opacity-100 md:z-40">
+            <div class="w-full h-full text-center content-center md:hidden hover:cursor-pointer" id="mobile-nav">
+                Open Navbar
+            </div>
             <ul id="nav-ul"
-                class="h-full hidden md:flex flex-col justify-around *:w-full *:text-center *:hover:cursor-pointer md:bg-slate-50 md:backdrop-blur-sm md:bg-opacity-50"
-                onclick="toggleNavbar()">
-                <li data-section="hero-section" onclick="scrollElement(this)">Home</li>
-                <li data-section="about-me" onclick="scrollElement(this)">About Me</li>
-                <li data-section="projects" onclick="scrollElement(this)">Projects</li>
-                <li data-section="contact-me" onclick="scrollElement(this)">Contact Me</li>
+                class="h-full hidden md:flex flex-col justify-around *:w-full *:text-center *:hover:cursor-pointer md:bg-slate-50 backdrop-blur-sm bg-opacity-70">
+                <li data-section="hero-section" class="nav-ul-lists">Home</li>
+                <li data-section="about-me" class="nav-ul-lists">About Me</li>
+                <li data-section="projects" class="nav-ul-lists">Projects</li>
+                <li data-section="contact-me" class="nav-ul-lists">Contact Me</li>
             </ul>
         </nav>
-        <section id="hero-section" class="h-screen bg-hero-image z-40 bg-cover bg-no-repeat md:pl-36">
+        <section id="hero-section" class="h-screen bg-hero-image bg-center z-50 bg-cover bg-no-repeat">
             <div id="hero-container"
-                class="h-full flex justify-center items-center text-5xl text-black bg-slate-300 bg-opacity-35 backdrop-blur-md">
-                <span class="animate-appear  px-4">Hello, I'm Anish Kumar Neupane 👋</span>
+                class="h-full flex justify-center items-center text-5xl text-black bg-slate-300 bg-opacity-50 backdrop-blur-md">
+                <div class=" px-4">
+                    <div data-aos="fade-down" data-aos-duration="500">Hello,</div>
+                    <div data-aos="fade-down" data-aos-duration="600">I'm</div> 
+                    <div data-aos="fade-up" data-aos-duration="500">Anish Kumar Neupane</div>
+                    <div data-aos="fade-up" data-aos-duration="600">👋</div>
+                </div>
             </div>
         </section>
         <main class="md:pl-36 h-fit text-black overflow-y-auto">
@@ -57,7 +61,7 @@
             </section>
             <section class="pt-12 flex justify-center items-center min-h-screen h-fit bg-slate-200" id="projects">
                 <div id="projects-container"
-                    class="w-full h-full min-h-screen justify-center gap-2 md:p-8 lg:justify-around flex flex-wrap shadow-md">
+                    class="w-full h-full min-h-screen justify-center gap-8 md:p-8 lg:justify-around flex flex-wrap shadow-md">
                     <div id="loading" class="w-full h-full text-9xl flex items-center justify-center">
                         <span class="animate-spin z-0">🌀</span>
                     </div>
@@ -65,31 +69,42 @@
 
                 </div>
             </section>
-            <section class="pt-12 md-12 flex justify-center items-center h-screen bg-slate-50 shadow-md" id="contact-me">
-                <div class="flex flex-col md:flex-row w-full h-full justify-center">
-                    <div data-aos="zoom-in" data-aos-duration="800" id="first-container" class="flex-1 p-2 lg:py-12 lg:px-60 ">
-                        <div class="contact-details bg-slate-200 backdrop-blur-sm bg-opacity-35 h-full rounded-md p-2 flex flex-col shadow-md">
+            <section class="pt-12 md-12 flex justify-center items-center h-screen bg-slate-50 shadow-md"
+                id="contact-me">
+                <div class="flex flex-col w-full h-full justify-center items-center">
+                    <div data-aos="zoom-in" data-aos-duration="800" id="first-container"
+                        class="flex-1 w-[95%] overflow-hidden sm:w-[80%] md:w-[70%] p-8 lg:py-12 ">
+                        <div
+                            class="contact-details bg-slate-200 backdrop-blur-sm bg-opacity-35 h-full rounded-md p-2 flex flex-col shadow-md">
                             <div class="title text-center border-b-2 border-blue-400">Social Media Handles</div>
-                            <div class="data flex flex-col justify-around items-center flex-1">
-                                <a data-aos="zoom-in" data-aos-duration="900" href="https://github.com/anishkn04" class="handle text-center flex gap-4 md:gap-12 items-center ">
+                            <div class="data flex overflow-hidden flex-col justify-around items-center flex-1">
+                                <a data-aos="zoom-in" data-aos-duration="900" href="https://github.com/anishkn04"
+                                    class="handle text-center flex gap-4 md:gap-12 items-center ">
                                     <img class="w-9" src="./images/github.svg" alt=""></img>
-                                    <span >Github: @anishkn04</span>
+                                    <span>Github: @anishkn04</span>
                                 </a>
-                                <a data-aos="zoom-in" data-aos-duration="950" href="https://linkedin.com/in/anishkn04/" class="handle text-center flex gap-4 md:gap-12 items-center ">
+                                <a data-aos="zoom-in" data-aos-duration="950" href="https://linkedin.com/in/anishkn04/"
+                                    class="handle text-center flex gap-4 md:gap-12 items-center ">
                                     <img class="w-9" src="./images/linkedin.png" alt=""></img>
-                                    <span >Linkedin: @anishkn04</span>
+                                    <span>Linkedin: @anishkn04</span>
                                 </a>
-                                <a data-aos="zoom-in" data-aos-duration="1000" data-aos-anchor-placement="center" href="https://facebook.com/anishkn04" class="handle text-center flex gap-4 md:gap-12 items-center ">
-                                    <img class="w-9" src="./images/facebook.png" alt=""></img>
-                                    <span >Facebook: @anishkn04</span>
+                                <a data-aos="zoom-in" data-aos-duration="1000" data-aos-anchor-placement="center"
+                                    href="https://facebook.com/anishkn04"
+                                    class="handle text-center flex gap-4 md:gap-12 items-center ">
+                                    <img class="w-9" src="./images/facebook.avif" alt=""></img>
+                                    <span>Facebook: @anishkn04</span>
                                 </a>
-                                <a data-aos="zoom-in" data-aos-duration="1050" data-aos-anchor-placement="center-bottom" href="https://instagram.com/anishkn04" class="handle text-center flex gap-4 md:gap-12 items-center ">
-                                    <img class="w-9" src="./images/instagram.svg" alt=""></img>
-                                    <span >Instagram: @anishkn04</span>
+                                <a data-aos="zoom-in" data-aos-duration="1050" data-aos-anchor-placement="center-bottom"
+                                    href="https://instagram.com/anishkn04"
+                                    class="handle text-center flex gap-4 md:gap-12 items-center ">
+                                    <img class="w-9" src="./images/instagram.avif" alt=""></img>
+                                    <span>Instagram: @anishkn04</span>
                                 </a>
-                                <a data-aos="zoom-in" data-aos-duration="1100" data-aos-anchor-placement="bottom-bottom" href="mailto:anishnep51@gmail.com" class="handle text-center flex gap-4 md:gap-12 items-center ">
+                                <a data-aos="zoom-in" data-aos-duration="1100" data-aos-anchor-placement="bottom-bottom"
+                                    href="mailto:anishnep51@gmail.com"
+                                    class="handle text-center flex gap-4 md:gap-12 items-center ">
                                     <img class="w-9" src="./images/email.svg" alt=""></img>
-                                    <span >Mail<span class="hidden md:inline">: anishnep1@gmail.com</span></span>
+                                    <span>Mail<span class="hidden md:inline">: anishnep1@gmail.com</span></span>
                                 </a>
                             </div>
                         </div>
@@ -106,6 +121,7 @@
     <script>
         AOS.init();
     </script>
+    <script src="./scripts/script.js"></script>
 </body>
 
 </html>
