Direct redirection from /drive

--- a/drive/index.html
+++ b/drive/index.html
@@ -1,49 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Drive Redirection</title>
-    <style>
-        *{
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-        body{
-            background-color: #272a35;
-            font: 1.5em sans-serif;
-            width: 100dvw;
-            height: 100dvh;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-around;
-            align-items: center;
-            color: white;
-            padding: 20px;
-        }
-        button{
-            height: 50px;
-            width: 150px;
-            color: white;
-            background-color: #466bf1;
-            border-radius: 8px;
-            border: 0;
-        }
-        button:hover{
-            cursor: pointer;
-            box-shadow: 2px 2px 8px black;
-        }
-    </style>
-</head>
-<body>
-    <div>Hello! If you are here for redirection to Drive, click the button below:</div>
-    <script>
-        const redirect = () => {
-            window.location.href = "https://drive.google.com/drive/folders/10GGUwKGjuAlzjPfdmyI1LUZenRwSSUzp"
-        }
-    </script>
-    <div><button onclick="redirect()">Redirect!</button></div>
-    <div>Had to remove redirection with cloudflare because apparently Google Search Console "flags" sites with redirection to sites like Drive.</div>
-</body>
-</html>
+<script>
+    window.location = "https://drive.google.com/drive/folders/10GGUwKGjuAlzjPfdmyI1LUZenRwSSUzp"
+</script>
