--- a/drive/index.html
+++ b/drive/index.html
@@ -1,3 +1,3 @@
 <script>
-    window.location = "https://drive.google.com/drive/folders/10GGUwKGjuAlzjPfdmyI1LUZenRwSSUzp"
+    window.location = "https://drive.google.com/drive/folders/1pe-94T_oa9rZ19hPh2lLJpLFyDBjbG9I?usp=sharing"
 </script>
